<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingBottom="4dp"
    android:paddingEnd="8dp"
    android:paddingStart="8dp"
    android:paddingTop="4dp">

    <android.support.v7.widget.CardView
        android:id="@+id/recipeCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipeImageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/recipe" />

            <TextView
                android:id="@+id/recipeNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/recipeImageView"
                android:background="@color/blackTransparent"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Recipe Name" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>